Add fullscreen toggler

--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "type": "bun x tsc --noEmit ./src",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "lucide-preact": "^0.540.0",
     "preact": "^10.26.9",
     "tailwindcss": "^4.1.11"
   },
