--- a/biome.json
+++ b/biome.json
@@ -17,6 +17,9 @@
     "enabled": true,
     "rules": {
       "recommended": true,
+      "a11y": {
+        "useKeyWithClickEvents": "off"
+      },
       "style": {
         "noNonNullAssertion": "off"
       }
